--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -9,8 +9,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+a {
+  text-decoration: none;
+}
+
 #header-wrapper {
-	width: 100%;
 	background-color: #252525;
 	color: white;
 	padding: 2em;
@@ -62,12 +65,16 @@ section > h2.title {
   flex-direction: row;
   align-items: center;
   padding: 0.8em 1.1em;
-  background-color: rgb(48, 163, 48);
+  background-color: rgb(46, 184, 46);
   color: white;
   border-radius: 3px;
   border: 0;
   margin-top: 1em;
   margin-bottom: 2em;
+}
+
+#bid-button:hover {
+  background-color: rgb(33, 128, 33);
 }
 
 #bid-button > span {
