--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -2,6 +2,8 @@ html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  color: #252525;
+  background-color: rgb(247, 247, 247);
 }
 body {
   margin: 0;
@@ -15,23 +17,28 @@ a {
 
 #header-wrapper {
 	background-color: #252525;
-	color: white;
-	padding: 2em;
+  color: white;
+  padding: 0.2em;
 }
 
-#header-wrapper > h1 {
-	text-align: center;
+#header-wrapper h2 {
+  text-align: center;
+  font-size: 2em;
 }
 
-#header-wrapper > h2 {
-	text-align: center;
+#title-wrapper h1 {
+  text-align: center;
+  font-size: 2.3em;
+  text-transform: uppercase;
+  padding: 1.2em;
 }
 
 #content {
-  padding: 2em;
+  padding: 0 2em;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: white;
 }
 
 section > h2.title {
